# rusty-bidule

./: .gitignore  Cargo.toml  FRONTEND_HANDOFF.md  FRONTEND_IMPROVEMENTS.md  FRONTEND_TEST_CHECKLIST.md  MIGRATION_COMPLETE.md  README.md  RECIPE_MIGRATION_PLAN.md  VISUAL_CHANGES.md
config/: config.example.yaml
docs/: HYPOTHESIS_DRIVEN_TESTING.md  MIGRATION_EXAMPLE.md  REFERENCE.md  REFERENCE_goal.md  SKILL_DRIVEN_ARCHITECTURE.md  TODO_TOOL_IMPLEMENTATION.md  data-directory-migration.md  fix-binary-file-handling.md
recipes/evidence-bundle/: RECIPE.md
recipes/ip-reputation/: RECIPE.md
recipes/morning-routine/: RECIPE.md
recipes/web-app-access-control/: RECIPE.md
recipes/web-app-active-baseline/: RECIPE.md
recipes/web-app-api-graphql-websocket/: RECIPE.md
recipes/web-app-auth-session/: RECIPE.md
recipes/web-app-browser-evidence/: RECIPE.md
recipes/web-app-business-logic-race/: RECIPE.md
recipes/web-app-client-side-review/: RECIPE.md
recipes/web-app-cms-wordpress/: RECIPE.md
recipes/web-app-dependency-integrity/: RECIPE.md
recipes/web-app-engagement-governance/: RECIPE.md
recipes/web-app-files-cache-host/: RECIPE.md
recipes/web-app-final-report/: RECIPE.md
recipes/web-app-hypothesis-loop/: RECIPE.md
recipes/web-app-input-validation/: RECIPE.md
recipes/web-app-passive-recon/: RECIPE.md
recipes/web-app-scanner-normalization/: RECIPE.md
recipes/web-app-scope-intake/: RECIPE.md
recipes_DEPRECATED/.deprecated/: README.md
recipes_DEPRECATED/evidence-bundle/: RECIPE.md
recipes_DEPRECATED/ip-reputation/: RECIPE.md
recipes_DEPRECATED/morning-routine/: RECIPE.md
recipes_DEPRECATED/web-app-access-control/: RECIPE.md
recipes_DEPRECATED/web-app-ai-feature-review/: RECIPE.md
recipes_DEPRECATED/web-app-burp-mcp-review/: RECIPE.md
recipes_DEPRECATED/web-app-business-logic-race/: RECIPE.md
recipes_DEPRECATED/web-app-cms-wordpress/: RECIPE.md
recipes_DEPRECATED/web-app-error-crypto-posture/: RECIPE.md
recipes_DEPRECATED/web-app-final-report/: RECIPE.md
recipes_DEPRECATED/web-app-input-validation/: RECIPE.md
scripts/: demo_hypothesis_loop.sh  migrate-to-home-dir.sh  migrate_recipes_to_skills.sh  setup-web-assessment-tools.sh
skills/_google_common/: google_workspace_auth.py
skills/_web_pentest_common/: web_assessment_common.py
skills/awesome-web-security/: SKILL.md
skills/data-analyst/: SKILL.md
skills/nmap/: SKILL.md
src/: auto_pull.rs  azure.rs  config.rs  conversation_store.rs  doc_sections.rs  llm.rs  local_tools.rs  logging.rs  main.rs  mcp_runtime.rs  oauth.rs  orchestrator.rs  paths.rs  prompt_expansion.rs  recipes.rs  redaction.rs  schedules.rs  skills.rs  tool_evidence.rs  types.rs  ui.rs  web.rs  workflows.rs
(+123 files in other folders)
