[package]
name = "rusty-bidule"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
crossterm = "0.29.0"
pulldown-cmark = "0.13.0"
rand = "0.9.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
webbrowser = "1.0.6"

[dev-dependencies]
tempfile = "3.23.0"
