[package]
name = "rusty-bidule"
version = "0.1.0"
edition = "2024"

[lints.clippy]
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
unneeded_field_pattern = "warn"

[dependencies]
adk-rust = { version = "0.8.4", default-features = false, features = ["models", "gemini", "openai", "anthropic", "azure-ai"] }
async-openai = { version = "0.34.0", features = ["byot", "chat-completion"] }
anyhow = "1.0.102"
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
crossterm = "0.29.0"
pulldown-cmark = "0.13.3"
rand = "0.10.1"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", default-features = false, features = ["form", "json", "rustls", "socks", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
tokio = { version = "1.51.1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.8"
webbrowser = "1.2.0"

[dev-dependencies]
tempfile = "3.27.0"
